[AH-A] Fix A11y spacing to follow more AA standart

--- a/src/components/base/Input/Input.module.scss
+++ b/src/components/base/Input/Input.module.scss
@@ -13,7 +13,7 @@
 .label {
     font-size: 14px;
     font-weight: f.$fw-medium;
-    line-height: 16px;
+    line-height: 22px;
 }
 
 .input {
