--- a/src/components/common/PageUnderConstruction/PageUnderConstruction.module.scss
+++ b/src/components/common/PageUnderConstruction/PageUnderConstruction.module.scss
@@ -32,11 +32,11 @@
 
     margin-bottom: 5px;
     font-size: 36px;
-    line-height: 38px;
+    line-height: 54px;
 
     @include bp.lw(m) {
         font-size: 30px;
-        line-height: 32px;
+        line-height: 45px;
     }
 }
 
